# halo

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.githooks/: pre-push
.github/workflows/: auto_pr.yml  ci.yml  ci_status.yml
apps/ios/: project.yml
apps/ios/HaloApp/Sources/: ActivityView.swift  ExecutionDetailView.swift  HaloAppApp.swift  RootView.swift  SetupView.swift
apps/ios/HaloAppUITests/: HaloAppUITests.swift
apps/ios/HaloMessagesExtension/Resources/: Info.plist
apps/ios/HaloMessagesExtension/Sources/: HaloMessagesRootView.swift  MessagesViewController.swift
apps/ios/Shared/: AnyCodable.swift  HaloAPI.swift  MessagePayload.swift  Models.swift
docs/: ACCEPTANCE.md  MANUAL_AMAZON.md  PLAN.md  RUNBOOK.md  TDD.md  amazon_browser.md  ci.md  dummy_pr.md  notes.md
infra/terraform/: README.md
infra/terraform/envs/dev/: main.tf
infra/terraform/envs/prod/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cloudrun/: main.tf
infra/terraform/modules/cloudsql/: main.tf
infra/terraform/modules/networking/: main.tf
scripts/: agent_status.sh  amazon_link.py  ci_wait.sh  resy_link.py  seed_data.py
services/api/app/: main.py
services/api/tests/: test_amazon_factory.py  test_audit_apis.py  test_booking_resy_errors.py  test_command_parse.py  test_command_to_draft.py  test_db_init.py  test_draft_get.py  test_draft_modify_confirm.py  test_health.py  test_mvp_acceptance.py  test_order_adapter_errors.py  test_order_api.py
services/worker/tests/: test_worker_import.py
services/worker/worker/: main.py
(+27 files in other folders)
